Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;

DllImport int ECF_GetAguardaImpressao(const INTPTR ecfHandle);

DllImport int ECF_GetAguardandoResposta(const INTPTR ecfHandle);

DllImport int ECF_GetAtivo(const INTPTR ecfHandle);

DllImport int ECF_GetColunas(const INTPTR ecfHandle);

DllImport int ECF_GetComandoEnviado(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetComandoLOG(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetDataHora(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetHandShake(const INTPTR ecfHandle);

DllImport int ECF_GetHardFlow(const INTPTR ecfHandle);

DllImport int ECF_GetModeloStr(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCupom(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetRespostaComando(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetRFDID(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetSoftFlow(const INTPTR ecfHandle);

DllImport int ECF_GetStopBits(const INTPTR ecfHandle);

DllImport int ECF_GetTimeOut(const INTPTR ecfHandle);

DllImport int ECF_SetAguardaImpressao(const INTPTR ecfHandle, const BOOL aguardaImpressao);

DllImport int ECF_SetComandoLOG(const INTPTR ecfHandle, const PCHAR comandoLog);

DllImport int ECF_SetHandShake(const INTPTR ecfHandle, const int handShake);

DllImport int ECF_SetHardFlow(const INTPTR ecfHandle, const BOOL hardFlow);

DllImport int ECF_SetSoftFlow(const INTPTR ecfHandle, const BOOL softFlow);

DllImport int ECF_SetStopBits(const INTPTR ecfHandle, const int stopBits);

DllImport int ECF_SetTimeOut(const INTPTR ecfHandle, const int timeOut);